Add role field to User; enhance permissions handling with role-based authority support