@@ -2,6 +2,7 @@ package com.yatik.infra.security;
 
 import com.yatik.infra.repository.SpringDataUserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -9,6 +10,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -21,10 +23,13 @@ public class CustomUserDetailsService implements UserDetailsService {
         com.yatik.domain.entity.User user = userRepo.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
+        // Prefixing the role with "ROLE_" is a convention in Spring Security
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + user.getRole().name());
+
         return new User(
                 user.getEmail(),
                 user.getPasswordHash(),
-                Collections.emptyList() // Authorities/Roles can be added here later
+                List.of(authority) // Authorities/Roles can be added here later
         );
     }
 }
